Implemented repositories and logger

--- a/GestiuneTurism/build.gradle
+++ b/GestiuneTurism/build.gradle
@@ -13,7 +13,11 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     // https://mvnrepository.com/artifact/postgresql/postgresql
-    implementation 'postgresql:postgresql:9.1-901-1.jdbc4'
+    implementation 'org.postgresql:postgresql:42.7.1'
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
+    implementation 'org.apache.logging.log4j:log4j-api:2.24.3'
 
 
 }
